src/test/deca/context/valid/SansObjet/DeclVar-NOT-boolean-boolean.deca
// Description:
//    Declaration of a boolean variable using ! operation on a boolean variable .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean z = !true ; 
}
