src/test/deca/context/invalid/SansObjet/DeclVar-UnaryMinus-int-boolean.deca
// Description:
//    Declaration of a int variable using - operation on a boolean variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    int z = -true ; 
}
